--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "todo-my",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://kavyamishra.github.io/Todo-my",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
